refactor todo to task
