# swagger.json
@@ -33,7 +33,7 @@
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "write:Users" ]
+          "taskstore_auth" : [ "write:Users" ]
         } ]
       }
     },
@@ -71,7 +71,7 @@
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "write:Users" ]
+          "taskstore_auth" : [ "write:Users" ]
         } ]
       }
     },
@@ -84,7 +84,7 @@
         "consumes" : [ "application/json" ],
         "produces" : [ "application/json" ],
         "parameters" : [ {
-          "in" : "head",
+          "in" : "header",
           "name" : "x-access-token",
           "example": "eyJhbGciOiJIUzn1uiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjAsImlhdCI6MTU1MTE5NDM3MywiZXhwIjoxNTUxMjgwNzczfQ.qP_drsMHA9vqxC8gfLmXJRWH1jjYpYWHDUkJ-hJiwTA",
           "description" : "Supply a valid token.",
@@ -102,46 +102,46 @@
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "read:Users" ]
+          "taskstore_auth" : [ "read:Users" ]
         } ]
       }
     },
-    "/api/v1/todos" : {
+    "/api/v1/tasks" : {
       "post" : {
-        "tags" : [ "ToDo" ],
-        "summary" : "Adds a new ToDo",
+        "tags" : [ "Task" ],
+        "summary" : "Adds a new Task",
         "description" : "",
-        "operationId" : "todoController.create",
+        "operationId" : "taskController.create",
         "consumes" : [ "application/json" ],
         "produces" : [ "application/json" ],
         "parameters" : [ {
           "in" : "body",
           "name" : "body",
-          "description" : "Todo object that needs to be added",
+          "description" : "Task object that needs to be added",
           "required" : true,
           "schema" : {
-            "$ref" : "#/definitions/Todo"
+            "$ref" : "#/definitions/Task"
           }
         } ],
         "responses" : {
           "201" : {
-            "description" : "ToDo Created"
+            "description" : "Task Created"
           },
           "405" : {
             "description" : "Invalid input"
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "write:todos" ]
+          "taskstore_auth" : [ "write:tasks" ]
         } ]
       }
     },
-    "/api/v1/todos/all" : {
+    "/api/v1/tasks/all" : {
       "get" : {
-        "tags" : [ "ToDo" ],
-        "summary" : "Returns all the ToDos",
+        "tags" : [ "Task" ],
+        "summary" : "Returns all the Tasks",
         "description" : "",
-        "operationId" : "todoController.list",
+        "operationId" : "taskController.list",
         "produces" : [ "application/json" ],
         "parameters" : [ ],
         "responses" : {
@@ -150,7 +150,7 @@
             "schema" : {
               "type" : "array",
               "items" : {
-                "$ref" : "#/definitions/Todo"
+                "$ref" : "#/definitions/Task"
               }
             }
           },
@@ -159,21 +159,21 @@
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "read:todos" ]
+          "taskstore_auth" : [ "read:tasks" ]
         } ]
       }
     },
-    "/api/v1/todos/{todo_id}" : {
+    "/api/v1/tasks/{task_id}" : {
       "get" : {
-        "tags" : [ "ToDo" ],
-        "summary" : "Returns the ToDo with the id if it exists",
+        "tags" : [ "Task" ],
+        "summary" : "Returns the Task with the id if it exists",
         "description" : "",
-        "operationId" : "todoController.find",
+        "operationId" : "taskController.find",
         "produces" : [ "application/json" ],
         "parameters" : [ {
-          "name" : "todo_id",
+          "name" : "task_id",
           "in" : "path",
-          "description" : "The id of the coresponding ToDo",
+          "description" : "The id of the coresponding Task",
           "required" : true,
           "type" : "integer",
           "format" : "int64"
@@ -184,7 +184,7 @@
             "schema" : {
               "type" : "array",
               "items" : {
-                "$ref" : "#/definitions/Todo"
+                "$ref" : "#/definitions/Task"
               }
             }
           },
@@ -193,30 +193,30 @@
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "write:todos", "read:todos" ]
+          "taskstore_auth" : [ "write:tasks", "read:tasks" ]
         } ]
       },
       "put" : {
-        "tags" : [ "ToDo" ],
-        "summary" : "Updates an existing ToDo",
+        "tags" : [ "Task" ],
+        "summary" : "Updates an existing Task",
         "description" : "",
-        "operationId" : "todoController.update",
+        "operationId" : "taskController.update",
         "consumes" : [ "application/json" ],
         "produces" : [ "application/json" ],
         "parameters" : [ {
-          "name" : "todo_id",
+          "name" : "task_id",
           "in" : "path",
-          "description" : "The id of the coresponding ToDo",
+          "description" : "The id of the coresponding Task",
           "required" : true,
           "type" : "integer",
           "format" : "int64"
         }, {
           "in" : "body",
           "name" : "body",
-          "description" : "Todo object that needs to be updated",
+          "description" : "Task object that needs to be updated",
           "required" : true,
           "schema" : {
-            "$ref" : "#/definitions/Todo"
+            "$ref" : "#/definitions/Task"
           }
         } ],
         "responses" : {
@@ -224,21 +224,21 @@
             "description" : "Invalid ID supplied"
           },
           "404" : {
-            "description" : "Todo not found"
+            "description" : "Task not found"
           },
           "405" : {
             "description" : "Validation exception"
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "write:todos", "read:todos" ]
+          "taskstore_auth" : [ "write:tasks", "read:tasks" ]
         } ]
       },
       "delete" : {
-        "tags" : [ "ToDo" ],
-        "summary" : "Deletes a ToDo",
+        "tags" : [ "Task" ],
+        "summary" : "Deletes a Task",
         "description" : "",
-        "operationId" : "deleteToDo",
+        "operationId" : "taskController.destroy",
         "produces" : [ "application/json" ],
         "parameters" : [ {
           "name" : "api_key",
@@ -246,26 +246,26 @@
           "required" : false,
           "type" : "string"
         }, {
-          "name" : "todo_id",
+          "name" : "task_id",
           "in" : "path",
-          "description" : "The id of the coresponding ToDo",
+          "description" : "The id of the coresponding task",
           "required" : true,
           "type" : "integer",
           "format" : "int64"
         } ],
         "responses" : {
           "204" : {
-            "description" : "Deleted ToDo"
+            "description" : "Deleted task"
           },
           "400" : {
             "description" : "Invalid ID supplied"
           },
           "404" : {
-            "description" : "Todo not found"
+            "description" : "Task not found"
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "write:todos", "read:todos" ]
+          "taskstore_auth" : [ "write:tasks", "read:tasks" ]
         } ]
       }
     },
@@ -295,7 +295,7 @@
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "write:users" ]
+          "taskstore_auth" : [ "write:users" ]
         } ]
       }
     },
@@ -329,7 +329,7 @@
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "read:users" ]
+          "taskstore_auth" : [ "read:users" ]
         } ]
       },
       "put" : {
@@ -367,7 +367,7 @@
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "write:users" ]
+          "taskstore_auth" : [ "write:users" ]
         } ]
       },
       "delete" : {
@@ -401,19 +401,19 @@
           }
         },
         "security" : [ {
-          "todostore_auth" : [ "write:users" ]
+          "taskstore_auth" : [ "write:users" ]
         } ]
       }
     }
   },
   "securityDefinitions" : {
-    "todostore_auth" : {
+    "taskstore_auth" : {
       "type" : "oauth2",
-      "authorizationUrl" : "http://ToDoStore.swagger.io/oauth/dialog",
+      "authorizationUrl" : "http://Taskstore.swagger.io/oauth/dialog",
       "flow" : "implicit",
       "scopes" : {
-        "write:todos" : "modify todos",
-        "read:todos" : "read todos",
+        "write:tasks" : "modify tasks",
+        "read:tasks" : "read tasks",
         "write:users" : "modify users",
         "read:users" : "read users"
       }
@@ -425,7 +425,7 @@
     }
   },
   "definitions" : {
-    "Todo" : {
+    "Task" : {
       "type" : "object",
       "required" : [ "content", "title" ],
       "properties" : {
@@ -459,7 +459,7 @@
         }
       },
       "xml" : {
-        "name" : "ToDo"
+        "name" : "Task"
       }
     },
     "User" : {
